@@ -1,3 +1,8 @@
+2011-08-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* DOS/cart.txt, DOC/USAGE, cartridge.[ch], ui.c: Added support for the
+  Blizzard-type 4KB cartridge (which contains a 2732 EPROM inside).
+
+
 2011-07-23  Kostas Nakos  <knakos@gmail.com>
 * atari.c: Use FPS defines in autoframeskip
 * android/*: Fix a nasty bug, when orientation was changed during the
